[BUGFIX] Long names in topic awards get cut off
Fixes #22

--- a/Resources/Public/como.css
+++ b/Resources/Public/como.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
 }
 body .container {
-  width: 960px;
+  width: 1200px;
   margin: 0 auto;
   position: relative;
   height: 790px;
@@ -38,7 +38,7 @@ body .notice {
 body .current {
   position: absolute;
   top: 100px;
-  right: 80px;
+  right: 200px;
   width: 300px;
   text-align: center;
 }
